# lifers

./: README.md  pyproject.toml
experience_packs/: naked_eye_planets.yaml
src/: architecture_generator.sh  experience_pack.yaml  experience_pack_generator.py
src/lifers_v0/: config.py
src/lifers_v0/app/: __init__.py  models.py  routes.py
src/lifers_v0/app/experience_packs/: naked_eye_planets.yaml
src/lifers_v0/app/templates/: index.html  pack_details.html
